Email Archival Application/objects/Archival_date__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_date__c</fullName>
        <label>To date</label>
        <type>DateTime</type>
    </fields>
    <label>Archival date</label>
    <listViews>
        <fullName>All_Values</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Object_Name__c</columns>
        <columns>Status__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Values</label>
        <language>en_US</language>
    </listViews>
</CustomObject>